crates/vox-compiler/tests/snapshots/golden_mesh_surface_test__agent_node_tsx_mesh_surface.snap
---
source: crates/vox-compiler/tests/golden_mesh_surface_test.rs
assertion_line: 124
expression: ts
---
import React from "react";

export interface AgentNodeProps {
  cx: number;
  cy: number;
  id: string;
  selected: string;
  on_click: any;
}

export function AgentNode({ cx, cy, id, selected, on_click }: AgentNodeProps): React.ReactElement {
  return (
<circle cx={cx} cy={cy} r={20} fill={"#27272a"} stroke={(selected === id ? "#3b82f6" : "#52525b")} strokeWidth={(selected === id ? 2 : 1)} raw_class={"cursor-pointer"} onClick={on_click} />
  );
}
