crates/vox-compiler/tests/snapshots/golden_mesh_surface_test__orch_node_tsx_mesh_surface.snap
---
source: crates/vox-compiler/tests/golden_mesh_surface_test.rs
assertion_line: 143
expression: ts
---
import React from "react";

export interface OrchNodeProps {
  points: string;
  id: string;
  selected: string;
  orch_stroke: string;
  on_click: any;
}

export function OrchNode({ points, id, selected, orch_stroke, on_click }: OrchNodeProps): React.ReactElement {
  return (
<polygon points={points} fill={"#0c1631"} stroke={(selected === id ? "#60a5fa" : orch_stroke)} strokeWidth={(selected === id ? 2 : 1.5)} raw_class={"cursor-pointer"} onClick={on_click} />
  );
}
